JUnit de caja blanca

--- a/Grupo8/pom.xml
+++ b/Grupo8/pom.xml
@@ -17,6 +17,14 @@
     </resources>
     <outputDirectory>classes/</outputDirectory>
   </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <name>Codigo_A</name>
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
